objects/ViewProposalCongaTemplateIds__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This list contains the Conga Template Ids that should be used for View Proposal button on Quote wizard for all the states in USA</description>
    <fields>
        <fullName>Conga_Doc_Template__c</fullName>
        <description>Case #543300 , requested by Tim Chen.This field is created to capture the Record ID of Conga Doc Template to use when we click View Proposal button on Quote wizard page on Portal.</description>
        <label>Conga Doc Template</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_XLS_Template__c</fullName>
        <description>Case #543300 , requested by Tim Chen.This field is created to capture the Record ID of Conga XLS Template to use when we click View Proposal button on Quote wizard page on Portal.</description>
        <label>Conga XLS Template</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Conga_Doc_Template__c</fullName>
        <description>This is used to capture the Conga template Id of doc version for loan</description>
        <label>Loan Conga Doc Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Conga_XLS_Template__c</fullName>
        <description>This is used to capture the conga template ID of xls for loan</description>
        <label>Loan Conga XLS Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>View Proposal Conga TemplateIds</label>
</CustomObject>